Fix Scrollbars on Construction page on Windows Desktop Browsers

--- a/src/Pages/Construction/Construction.scss
+++ b/src/Pages/Construction/Construction.scss
@@ -22,10 +22,12 @@
     text-align: center;
     opacity: 0.9;
     max-height: 80vh;
-    overflow: scroll;
+    overflow-x: hidden;
+    overflow-y: scroll;
     @media screen and (min-width: 800px) {
       left: 40%;
       max-width: 500px;
+      overflow: hidden
     }
   }
 }
